test_regress/t/t_sequence_first_match_unsup.out
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:51:51: Unsupported: Implication with sequence expression as antecedent
                                                          : ... note: In instance 'main'
   51 |   initial p0 : assert property ((##1 1) or(##2 1) |-> x == 1);
      |                                                   ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:51:16: Unsupported: Unclocked assertion
                                                          : ... note: In instance 'main'
   51 |   initial p0 : assert property ((##1 1) or(##2 1) |-> x == 1);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:54:65: Unsupported: Implication with sequence expression as antecedent
                                                          : ... note: In instance 'main'
   54 |   initial p1 : assert property (first_match ((##1 1) or(##2 1)) |-> x == 1);
      |                                                                 ^~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:54:16: Unsupported: Unclocked assertion
                                                          : ... note: In instance 'main'
   54 |   initial p1 : assert property (first_match ((##1 1) or(##2 1)) |-> x == 1);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:57:44: Unsupported: Implication with sequence expression as antecedent
                                                          : ... note: In instance 'main'
   57 |   initial p2 : assert property (1 or ##1 1 |-> x == 0);
      |                                            ^~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:57:16: Unsupported: Unclocked assertion
                                                          : ... note: In instance 'main'
   57 |   initial p2 : assert property (1 or ##1 1 |-> x == 0);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:60:58: Unsupported: Implication with sequence expression as antecedent
                                                          : ... note: In instance 'main'
   60 |   initial p3 : assert property (first_match (1 or ##1 1) |-> x == 0);
      |                                                          ^~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:60:16: Unsupported: Unclocked assertion
                                                          : ... note: In instance 'main'
   60 |   initial p3 : assert property (first_match (1 or ##1 1) |-> x == 0);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:51:16: Unsupported: Procedural concurrent assertion with clocking event inside always (IEEE 1800-2023 16.14.6)
                                                          : ... note: In instance 'main'
   51 |   initial p0 : assert property ((##1 1) or(##2 1) |-> x == 1);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:54:16: Unsupported: Procedural concurrent assertion with clocking event inside always (IEEE 1800-2023 16.14.6)
                                                          : ... note: In instance 'main'
   54 |   initial p1 : assert property (first_match ((##1 1) or(##2 1)) |-> x == 1);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:57:16: Unsupported: Procedural concurrent assertion with clocking event inside always (IEEE 1800-2023 16.14.6)
                                                          : ... note: In instance 'main'
   57 |   initial p2 : assert property (1 or ##1 1 |-> x == 0);
      |                ^~~~~~
%Error-UNSUPPORTED: t/t_sequence_first_match_unsup.v:60:16: Unsupported: Procedural concurrent assertion with clocking event inside always (IEEE 1800-2023 16.14.6)
                                                          : ... note: In instance 'main'
   60 |   initial p3 : assert property (first_match (1 or ##1 1) |-> x == 0);
      |                ^~~~~~
%Error: Exiting due to
